force-app/main/default/objects/Bridger_Setting__c/Bridger_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains Bridger Settings</description>
    <label>Bridger Settings</label>
</CustomObject>