force-app/main/default/objects/Bridger_Setting__c/fields/Account_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Account_Endpoint__c</fullName>
    <label>Account Endpoint</label>
    <length>125</length>
    <type>Text</type>
</CustomField>