force-app/main/default/objects/Bridger_Setting__c/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <label>End Point</label>
    <length>100</length>
    <type>Text</type>
</CustomField>