force-app/main/default/objects/Bridger_Setting__c/fields/Notification_Role__c.field-meta.xml
<CustomField>
    <fullName>Notification_Role__c</fullName>
    <label>Notification Role</label>
    <length>20</length>
    <type>Text</type>
</CustomField>