force-app/main/default/objects/Bridger_Setting__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Notification Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>