force-app/main/default/objects/Bridger_Setting__c/fields/Predefined_Search_Name__c.field-meta.xml
<CustomField>
    <fullName>Predefined_Search_Name__c</fullName>
    <label>Predefined Search Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>